// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
.emotion-35 {
  border-collapse: collapse;
  text-align: center;
  line-height: 1.5rem;
  width: 100%;
}

.emotion-35 th {
  width: 2rem;
  padding: 0.25rem 0;
}

.emotion-0 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
}

.emotion-0:hover {
  cursor: pointer;
  background: #F2F2F7;
}

<table
  class="emotion-35"
  role="listbox"
>
  <thead>
    <tr>
      <th>
        S
      </th>
      <th>
        M
      </th>
      <th>
        T
      </th>
      <th>
        W
      </th>
      <th>
        T
      </th>
      <th>
        F
      </th>
      <th>
        S
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        data-date="2018-09-30"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          30
        </span>
      </td>
      <td
        data-date="2018-10-01"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          01
        </span>
      </td>
      <td
        data-date="2018-10-02"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          02
        </span>
      </td>
      <td
        data-date="2018-10-03"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          03
        </span>
      </td>
      <td
        data-date="2018-10-04"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          04
        </span>
      </td>
      <td
        data-date="2018-10-05"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          05
        </span>
      </td>
      <td
        data-date="2018-10-06"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          06
        </span>
      </td>
    </tr>
    <tr>
      <td
        data-date="2018-10-07"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          07
        </span>
      </td>
      <td
        data-date="2018-10-08"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          08
        </span>
      </td>
      <td
        data-date="2018-10-09"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          09
        </span>
      </td>
      <td
        data-date="2018-10-10"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          10
        </span>
      </td>
      <td
        data-date="2018-10-11"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          11
        </span>
      </td>
      <td
        data-date="2018-10-12"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          12
        </span>
      </td>
      <td
        data-date="2018-10-13"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          13
        </span>
      </td>
    </tr>
    <tr>
      <td
        data-date="2018-10-14"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          14
        </span>
      </td>
      <td
        data-date="2018-10-15"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          15
        </span>
      </td>
      <td
        data-date="2018-10-16"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          16
        </span>
      </td>
      <td
        data-date="2018-10-17"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          17
        </span>
      </td>
      <td
        data-date="2018-10-18"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          18
        </span>
      </td>
      <td
        data-date="2018-10-19"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          19
        </span>
      </td>
      <td
        data-date="2018-10-20"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          20
        </span>
      </td>
    </tr>
    <tr>
      <td
        data-date="2018-10-21"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          21
        </span>
      </td>
      <td
        data-date="2018-10-22"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          22
        </span>
      </td>
      <td
        data-date="2018-10-23"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          23
        </span>
      </td>
      <td
        data-date="2018-10-24"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          24
        </span>
      </td>
      <td
        data-date="2018-10-25"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          25
        </span>
      </td>
      <td
        data-date="2018-10-26"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          26
        </span>
      </td>
      <td
        data-date="2018-10-27"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          27
        </span>
      </td>
    </tr>
    <tr>
      <td
        data-date="2018-10-28"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          28
        </span>
      </td>
      <td
        data-date="2018-10-29"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          29
        </span>
      </td>
      <td
        data-date="2018-10-30"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          30
        </span>
      </td>
      <td
        data-date="2018-10-31"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          31
        </span>
      </td>
      <td
        data-date="2018-11-01"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          01
        </span>
      </td>
      <td
        data-date="2018-11-02"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          02
        </span>
      </td>
      <td
        data-date="2018-11-03"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          03
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should use createDayStyles function to create styles for days 1`] = `
.emotion-35 {
  border-collapse: collapse;
  text-align: center;
  line-height: 1.5rem;
  width: 100%;
}

.emotion-35 th {
  width: 2rem;
  padding: 0.25rem 0;
}

.emotion-0 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  color: red;
}

.emotion-0:hover {
  cursor: pointer;
  background: #F2F2F7;
}

<table
  class="emotion-35"
  role="listbox"
>
  <thead>
    <tr>
      <th>
        S
      </th>
      <th>
        M
      </th>
      <th>
        T
      </th>
      <th>
        W
      </th>
      <th>
        T
      </th>
      <th>
        F
      </th>
      <th>
        S
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        data-date="2018-09-30"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          30
        </span>
      </td>
      <td
        data-date="2018-10-01"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          01
        </span>
      </td>
      <td
        data-date="2018-10-02"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          02
        </span>
      </td>
      <td
        data-date="2018-10-03"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          03
        </span>
      </td>
      <td
        data-date="2018-10-04"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          04
        </span>
      </td>
      <td
        data-date="2018-10-05"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          05
        </span>
      </td>
      <td
        data-date="2018-10-06"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          06
        </span>
      </td>
    </tr>
    <tr>
      <td
        data-date="2018-10-07"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          07
        </span>
      </td>
      <td
        data-date="2018-10-08"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          08
        </span>
      </td>
      <td
        data-date="2018-10-09"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          09
        </span>
      </td>
      <td
        data-date="2018-10-10"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          10
        </span>
      </td>
      <td
        data-date="2018-10-11"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          11
        </span>
      </td>
      <td
        data-date="2018-10-12"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          12
        </span>
      </td>
      <td
        data-date="2018-10-13"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          13
        </span>
      </td>
    </tr>
    <tr>
      <td
        data-date="2018-10-14"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          14
        </span>
      </td>
      <td
        data-date="2018-10-15"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          15
        </span>
      </td>
      <td
        data-date="2018-10-16"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          16
        </span>
      </td>
      <td
        data-date="2018-10-17"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          17
        </span>
      </td>
      <td
        data-date="2018-10-18"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          18
        </span>
      </td>
      <td
        data-date="2018-10-19"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          19
        </span>
      </td>
      <td
        data-date="2018-10-20"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          20
        </span>
      </td>
    </tr>
    <tr>
      <td
        data-date="2018-10-21"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          21
        </span>
      </td>
      <td
        data-date="2018-10-22"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          22
        </span>
      </td>
      <td
        data-date="2018-10-23"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          23
        </span>
      </td>
      <td
        data-date="2018-10-24"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          24
        </span>
      </td>
      <td
        data-date="2018-10-25"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          25
        </span>
      </td>
      <td
        data-date="2018-10-26"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          26
        </span>
      </td>
      <td
        data-date="2018-10-27"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          27
        </span>
      </td>
    </tr>
    <tr>
      <td
        data-date="2018-10-28"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          28
        </span>
      </td>
      <td
        data-date="2018-10-29"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          29
        </span>
      </td>
      <td
        data-date="2018-10-30"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          30
        </span>
      </td>
      <td
        data-date="2018-10-31"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          31
        </span>
      </td>
      <td
        data-date="2018-11-01"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          01
        </span>
      </td>
      <td
        data-date="2018-11-02"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          02
        </span>
      </td>
      <td
        data-date="2018-11-03"
      >
        <span
          aria-selected="false"
          class="emotion-0"
          role="option"
        >
          03
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;
